--- a/src/front/styles/Quiz.css
+++ b/src/front/styles/Quiz.css
@@ -1,14 +1,14 @@
 .question-title {
   width: 37.5rem;
   height: 13.125rem;
-  background: linear-gradient(60deg, #96deda 0%, #50c9c3 100%);
+  background: #6643b5;
   border-radius: 0.313rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 23px rgba(0, 0, 0, 0.1)  ; 
-	-webkit-box-shadow: 0 0 23px rgba(0, 0, 0, 0.1)  ; 
-	-moz-box-shadow: 0 0 23px rgba(0, 0, 0, 0.1)  ; 
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
+  -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
+  -moz-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
 }
 
 .questions-container {
@@ -22,7 +22,7 @@
 .question-block {
   width: 17.875rem;
   height: auto;
-  background-color: #98dfea;
+  background: #8594e4;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 0px 0px 1px;
   text-align: center;
@@ -30,6 +30,9 @@
   overflow: hidden;
   border: none;
   padding: 0;
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
+	-webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
+	-moz-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2)  ; 
 }
 
 .question-block img{
@@ -42,14 +45,16 @@
 }
 
 .question-block a {
-  color: #999;
+  color: rgb(200, 197, 197);
   text-decoration: none;
+  font-size: .7rem;
 }
+
 
 .answer-block {
   width: 37.5rem;
   height: 31rem;
-  background-color: #07beb8;
+  background: #430f58;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -67,4 +72,8 @@
 
 .answer-block img {
   width: 90%;
+}
+
+.title{
+    color: black;
 }
