--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -6,23 +6,10 @@
 }
 
 body {
-  color: #25283d;
-  background: rgb(255, 255, 255);
+  color: white;
+  background: #d5def5;
 }
 
-nav {
-  background-color: #98dfea;
-  height: 3rem;
-  align-items: center;
-  box-shadow: 0 6px 19px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 6px 19px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 6px 19px rgba(0, 0, 0, 0.3);
-}
-
-a {
-  color: #25283d;
-  text-decoration: none;
-}
 
 .App {
   width: 37.5rem;
@@ -30,6 +17,15 @@ a {
   justify-content: center;
   flex-direction: column;
   margin: 2rem auto;
+}
+ nav{
+  box-shadow: 0 26px 24px rgba(0, 0, 0, 0.2)  ; 
+	-webkit-box-shadow: 0 26px 24px rgba(0, 0, 0, 0.2)  ; 
+	-moz-box-shadow: 0 26px 24px rgba(0, 0, 0, 0.2)  ; 
+  background: #8594e4;
+ }
+.navbar-brand {
+  color: #430f58;
 }
 
 h1 {
